# snipdesk

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json  package.json  rust-toolchain.toml  vite.config.js
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  preview-build.yml  release-server.yml  release.yml
brands/_template/: README.md  brand.json
brands/_template/installer-assets/: README.md
crates/snipdesk-core/: Cargo.toml
crates/snipdesk-core/src/: backup.rs  db.rs  lib.rs  logging.rs  paste.rs  phraseexpress.rs  settings.rs  shared_library.rs  validate.rs
crates/snipdesk-server/: Cargo.toml  snipdesk-server.example.toml
crates/snipdesk-server/migrations/: 0001_initial.sql  0002_library_tombstones.sql  0003_encrypted_version.sql  0004_sync_version_unique.sql  0005_paste_telemetry.sql  0006_drop_user_activity.sql  0007_audit_log.sql  0008_library_folders.sql  0009_oidc_provider.sql  0010_ticket_usage.sql  0011_onboarding_events.sql
crates/snipdesk-server/src/: audit.rs  auth.rs  cli.rs  config.rs  console.rs  crypto.rs  db.rs  error.rs  fx.rs  http.rs  lib.rs  main.rs  purge.rs  updater.rs  validate.rs
crates/snipdesk-server/src/dashboard/: assets.rs  mod.rs  pages.rs  session.rs
crates/snipdesk-server/src/dashboard/static/: dashboard.css
crates/snipdesk-server/src/dashboard/templates/: layout.html  login.html  member_blocked.html  setup.html
crates/snipdesk-server/src/handlers/: admin.rs  auth.rs  client_config.rs  library.rs  metrics.rs  mod.rs  oidc.rs  snippets.rs  usage.rs
crates/snipdesk-server/tests/: admin.rs  auth.rs  cli_audit.rs  dashboard_library_io.rs  dashboard_setup.rs  library.rs  oidc.rs  snippets.rs  usage.rs
crates/snipdesk-teams/: Cargo.toml
crates/snipdesk-teams/examples/: keyring_probe.rs
crates/snipdesk-teams/src/: api.rs  credentials.rs  lib.rs  shared_url.rs  sync.rs
docs/: ROADMAP.md  auto-update.md  browser-integration.md  build.md  ci-reference.md  deploy.md  docker-quickstart.md  extension.md  getting-started.md  index.md  server-design.md  whitelabel.md
docs/.vitepress/: config.mjs
extension/: README.md  manifest.config.js  package-lock.json  package.json  vite.config.js
extension/public/: managed-schema.json
extension/scripts/: pack.mjs
extension/src/background/: index.js
extension/src/content/: index.js  overlay.css
extension/src/manager/: index.html  manager.css  manager.js
extension/src/popup/: index.html  popup.css  popup.js
extension/src/shared/: api.js  format.js  messages.js  search.js  storage.js  theme.css  validate.js  variables.js
extension/test/: search.test.js  storage.test.js  validate.test.js  variables.test.js
scripts/: brand.mjs  build-teams.mjs  build-windows.ps1  clear-icon-cache.ps1  dev-teams.mjs  gen-installer-defaults.mjs  generate-manifest.ps1  git-init.ps1  load-env.mjs  pack-brand.mjs  preflight.mjs  reinstall.ps1  setup-hooks.mjs  sync-gitlab.ps1  tauri-build.mjs  whitelabel.example.toml  whitelabel.mjs
shared/styles/: scrollbars.css  tokens.css
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.teams.conf.json  tauri.teams.conf.json.template
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer-defaults/: README.md  license.rtf
src-tauri/src/: commands.rs  lib.rs  main.rs  server_commands.rs
