# resolver = "2" is required for the target-specific feature resolution that
# the tauri-plugin-* crates rely on; without it we get link errors on
# Windows-only crates being compiled for non-Windows targets.
[workspace]
resolver = "2"
members = [
    "crates/snipdesk-core",
    "crates/snipdesk-server",
    "crates/snipdesk-teams",
    "src-tauri",
]

# Pinned here so a single bump propagates across all crates and we can't
# accidentally end up with two versions of the same dep in the graph.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = { version = "2", features = ["tls", "json"] }

# LTO + single codegen-unit shave another ~10% off the Windows binary at
# the cost of build time. `panic = "abort"` drops unwinding tables we don't
# use; `strip = "symbols"` keeps the .pdb separate for crash reports.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Dev iteration optimizations.
#
# `split-debuginfo = "packed"` writes the debug data into a separate .pdb
# next to the .exe so an incremental relink can skip rewriting megabytes
# of symbol info each cycle. Native Windows debuggers + the Rust tooling
# read the .pdb the same way regardless of where it's split out.
[profile.dev]
split-debuginfo = "packed"

# Dependencies compile once per session and then run for the rest of it,
# so leaving them at the default opt-level = 0 makes the dev app feel
# sluggish (icon decode, SQLite queries, JSON serde, tauri internals). At
# opt-level = 1 the deps run measurably faster while user code stays at
# opt-level = 0 - so incremental compile of YOUR changes is unaffected.
# First cold build is slightly longer (each dep gets -O1 instead of -O0);
# every subsequent edit cycle benefits.
[profile.dev.package."*"]
opt-level = 1
