[package]
name = "snipdesk"
version = "0.1.2"
description = "Fast snippet launcher for support agents"
authors = ["2lukewil"]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[lib]
name = "snipdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
snipdesk-core = { path = "../crates/snipdesk-core" }
# Optional so the free build's dep graph contains zero networking code.
# `cargo tree --no-default-features` should not list this crate or ureq.
snipdesk-teams = { path = "../crates/snipdesk-teams", optional = true }

# `devtools` keeps the Chromium DevTools available in release builds so
# users can self-diagnose. Right-click → Inspect, or F12.
tauri = { version = "2.1", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-autostart = "2"
# Auto-update applies to both flavors (the offline NSIS build is what end
# users grab), so these are non-optional. The updater's HTTP client is
# `reqwest`, not `ureq` - the offline-guarantee check in ci.yml greps for
# `ureq`/`snipdesk-teams` specifically, so this doesn't trip it.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Persists the main window's size/position across launches.
tauri-plugin-window-state = "2"
# Opens external URLs in the user's default browser. Used by the OIDC
# "Sign in with Google" flow to hand off to the system browser instead
# of opening a webview inside the Tauri app (which wouldn't share the
# user's existing Google session). Teams-only - the offline build has
# no use for it. Marking optional keeps the Lite dep graph clean.
tauri-plugin-shell = { version = "2", optional = true }
# Receives snipdesk://auth?token=... callbacks from the OAuth browser
# return. Registers the URL scheme with the OS (Windows registry,
# macOS Info.plist, Linux .desktop) so the OAuth landing page can
# fire the deep link and have it land on the running Tauri app.
tauri-plugin-deep-link = { version = "2", optional = true }
# Forwards args from a second exe launch (snipdesk://... opened by the
# browser) into the already-running instance so the deep-link handler
# fires on the user's existing session instead of spawning a fresh
# (signed-out) app. Pairs with deep-link per the plugin's documented
# pattern.
tauri-plugin-single-instance = { version = "2", optional = true, features = ["deep-link"] }
# Parsed by the deep-link handler when reading snipdesk://auth?token=.
url = { version = "2", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[features]
# `custom-protocol` is Tauri's release-mode flag; required for the bundled
# webview to load assets without a dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# `dep:` (Cargo 1.60+) avoids implicitly creating a same-named feature.
teams = [
    "dep:snipdesk-teams",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-single-instance",
    "dep:url",
]
