[package]
name = "snipdesk-core"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "Snippet engine, storage, and OS integration for SnipDesk"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }

# Windows uses native SendInput / WM_PASTE in paste.rs; enigo is only
# linked for the non-Windows fallback. arboard backs the non-Windows
# clipboard save/restore in the quick-add selection capture.
[target.'cfg(not(windows))'.dependencies]
enigo = "0.2"
arboard = "3"

# Focus capture/restore on macOS: the frontmost-app pid plays the
# role the foreground HWND plays on Windows.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = [
    "NSWorkspace",
    "NSRunningApplication",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
] }
