[package]
name = "snipdesk-server"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
description = "Self-hostable backend for SnipDesk Teams"
license = "MIT"
publish = false

[[bin]]
name = "snipdesk-server"
path = "src/main.rs"

[dependencies]
# HTTP + async runtime
axum = { version = "0.7", features = ["macros"] }
# Cookie jar extractor for the htmx admin dashboard. We don't need the
# whole `typed-header` family - `cookie` carries `CookieJar` + the
# right `Set-Cookie` plumbing for our session JWT, and that's it.
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Crypto for snippet-payload encryption at rest
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Auth: Argon2id password hashing + HS256 JWTs
argon2 = "0.5"
jsonwebtoken = "9"

# OIDC for "Sign in with Google" (and any future OIDC providers). The
# crate handles PKCE, discovery, ID token verification with Google's
# JWKS, and the nonce binding - rolling those by hand is a footgun.
openidconnect = "3"
url = "2"
# Used by the OIDC callback page to safely URL-encode the JWT before
# appending it to the snipdesk:// deep link.
urlencoding = "2"

# Config + CLI
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Live FX fetch (optional; enabled when [fx] block is configured).
# reqwest is already in the tree via openidconnect, so this just
# pins the same crate at the same major - no extra dep weight.
# rustls so we don't drag in openssl on Alpine/musl builds.
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Workspace-shared utility crates
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
